# CMake_OLAS

./: .gitignore  .gitmodules  CMakeLists.txt  License.txt  OLASConfig.h.in  README.MD  build.sh  configure.sh  main.cpp  readme.md
Math_Lib/: CMakeLists.txt  basics.cpp
